# dash-prometheus

./: LICENSE  README.md  pyproject.toml
.github/workflows/: install.yml
src/dash_prometheus/: __init__.py  metrics.py  middleware.py
